--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,11 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: 
+      - '*'
   pull_request:
-    branches: [ master ]
+    branches: 
+      - '*'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -22,9 +24,15 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v2
+      
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
+            sudo apt update
+            sudo apt install uuid-dev
             ./antlr4_setup_macOs_linux.sh
-            mkdir build 
+            mkdir build && cd build
             cmake ..
+            make
