feat(main.yml): added artifacts for .deb file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,8 @@ jobs:
     - name: Build expressPython
       run: |
             sudo ./build.sh
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: expressPython.deb
+        path: /build/expressPython-0.1.1-Linux.deb
